--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,8 +3,10 @@
 }
 
 :root {
-	--fg: #131313;
-	--bg: #fefefe;
+	--fg: #000;
+	--bg: #e2e0d3;
+	--highlight: #ebe8de;
+	--active: #f0d548;
 	--font-family: 'Monaspace Krypton Var', monospace;
 
 	color: var(--fg);
@@ -14,10 +16,10 @@
 	font-weight: 700;
 	line-height: 1.5;
 
-	@media (prefers-color-scheme: dark) {
+	/* @media (prefers-color-scheme: dark) {
 		--fg: #fefefe;
 		--bg: #131313;
-	}
+	} */
 }
 
 body {
@@ -26,21 +28,28 @@ body {
 }
 
 main {
-	max-width: 1280px;
+	display: flex;
+	flex-direction: column;
+	gap: 0.125rem;
 	margin: 0 auto;
+	max-inline-size: 1280px;
 	padding: 2rem;
 	text-align: center;
+
+	section:empty {
+		display: none;
+	}
 }
 
 button {
-	background: var(--bg);
+	background: var(--fg);
 	align-self: center;
 	border: 2px solid var(--fg);
-	color: var(--fg);
+	color: var(--highlight);
 	cursor: pointer;
 	display: block;
 	font-family: var(--font-family);
-	font-weight: 700;
+	font-weight: 500;
 	line-height: 1.5;
 	padding: 0.25rem 0.5rem;
 
@@ -50,16 +59,47 @@ button {
 	}
 
 	&.selected,
-	&.active {
-		background: var(--fg);
-		color: var(--bg);
+	&.active,
+	&:active,
+	&:hover,
+	&:focus {
+		background: var(--active);
+		color: var(--fg);
+		font-weight: 700;
 	}
 }
 
-section {
+section:not(:empty) {
+	border: 2px solid var(--fg);
 	display: flex;
-	gap: 1rem;
-	margin-block-start: 2rem;
+	gap: 0.125rem;
+	margin: 0;
+	padding: 1rem;
+
+	&.overview {
+		border: none;
+		justify-content: space-between;
+		margin: 0;
+		padding: 0;
+
+		.detail {
+			border: 2px solid var(--fg);
+			inline-size: 100%;
+			padding: 1rem 0.5rem;
+
+			h3 {
+				font-size: 0.625rem;
+				font-weight: 500;
+				line-height: 1.1;
+				margin: 0;
+			}
+
+			p {
+				line-height: 1.1;
+				margin: 0.5rem 0 0;
+			}
+		}
+	}
 
 	&.questions {
 		align-items: start;
@@ -70,14 +110,195 @@ section {
 		}
 
 		details {
+			align-items: start;
 			display: flex;
 			flex-direction: column;
-			align-items: start;
 			inline-size: 100%;
+			margin: 0;
 
 			p {
 				color: color-mix(in oklch, var(--fg) 50%, var(--bg));
 				margin: 0.5rem 0 0 1.25rem;
+			}
+		}
+	}
+
+	&.controls {
+		container: section-controls / inline-size;
+		flex-direction: column;
+		gap: 0.5rem;
+		padding-block: 2.5rem;
+
+		.heading {
+			h2 {
+				font-size: 1.5rem;
+				margin: 0;
+			}
+
+			p:not([class]) {
+				font-weight: 500;
+				margin: 0.25rem 0 0.75rem;
+			}
+
+			img {
+				display: block;
+				block-size: 35cqi;
+				inline-size: 100%;
+				margin: 1rem 0;
+				object-fit: contain;
+			}
+		}
+
+		.question-options {
+			display: flex;
+			flex-wrap: wrap;
+			gap: 0.25rem;
+			inline-size: 90%;
+			margin: 0.5rem auto;
+
+			+ p {
+				margin-block-start: 1rem;
+			}
+		}
+
+		.question-option {
+			background: var(--highlight);
+			border: 2px solid var(--fg);
+			inline-size: calc(50% - 0.125rem);
+			padding: 0.75rem;
+			text-align: start;
+
+			&.correct-answer {
+				background: var(--active);
+			}
+		}
+
+		.question-answer {
+			margin-block-start: 1rem;
+		}
+
+		.buttons {
+			display: flex;
+			gap: 0.5rem;
+			justify-content: center;
+
+			button {
+				font-size: 1rem;
+				padding: 0.5rem 1rem;
+			}
+		}
+	}
+
+	&.contestants {
+		border: none;
+		justify-content: space-between;
+		margin: 0;
+		padding: 0;
+
+		.contestant {
+			border: 2px solid var(--fg);
+			display: grid;
+			gap: 1.5rem 0;
+			grid-template: 'name state' auto / 50% 50%;
+			inline-size: 100%;
+			padding: 1rem 0.5rem;
+
+			.name {
+				display: flex;
+				flex-direction: column;
+				gap: 0.5rem;
+				grid-area: name;
+				place-content: center;
+
+				h2 {
+					align-self: center;
+					font-size: 1.5rem;
+					line-height: 1.1;
+					margin: 0;
+				}
+
+				button {
+					font-size: 0.625rem;
+					margin: 0;
+				}
+			}
+
+			.state {
+				display: flex;
+				flex-direction: column;
+				gap: 0.5rem;
+				grid-area: state;
+
+				p {
+					display: flex;
+					gap: 0.25rem;
+					font-weight: 500;
+					line-height: 1.1;
+					margin: 0;
+
+					.score-label {
+						inline-size: 12cqi;
+						text-align: end;
+					}
+
+					&.score {
+						font-size: 1.25rem;
+					}
+				}
+			}
+
+			.overrides[open] {
+				container: override / inline-size;
+				display: flex;
+				flex-wrap: wrap;
+				gap: 1.25rem 0.5rem;
+				inline-size: 80dvi;
+				justify-content: space-between;
+				padding-block: 1.5rem;
+
+				header,
+				div {
+					inline-size: 100%;
+					text-align: center;
+
+					h2 {
+						line-height: 1.1;
+						margin: 0;
+					}
+
+					button {
+						margin-inline: auto;
+					}
+				}
+
+				form {
+					border: 2px solid var(--fg);
+					font-size: 0.75rem;
+					font-weight: 500;
+					inline-size: calc(50% - 0.25rem);
+					padding: 0.75rem;
+
+					label {
+						font-size: 1rem;
+					}
+
+					input {
+						border: 2px solid var(--fg);
+						font-family: inherit;
+						font-size: 1.25rem;
+						font-weight: 500;
+						inline-size: 100%;
+						line-height: 1.1;
+						margin-block-start: 0.5rem;
+						padding: 0.5rem;
+						text-align: center;
+					}
+
+					button {
+						inline-size: 100%;
+						margin-block-start: 0.5rem;
+					}
+				}
 			}
 		}
 	}
@@ -88,7 +309,7 @@ section {
 	grid-template-columns: 1fr 1fr;
 
 	.contestant {
-		border: 1px solid var(--fg);
+		border: 2px solid var(--fg);
 		padding: 2rem;
 
 		h2 {
@@ -115,7 +336,7 @@ section {
 }
 
 .active-question {
-	border: 1px solid var(--fg);
+	border: 2px solid var(--fg);
 	flex-direction: column;
 	gap: 1rem;
 	margin-block-end: 3rem;
@@ -138,7 +359,7 @@ section {
 		grid-template-columns: 1fr 1fr;
 
 		.choice {
-			border: 1px solid var(--fg);
+			border: 2px solid var(--fg);
 			inline-size: 100%;
 			padding: 1rem;
 			text-align: left;
@@ -292,5 +513,33 @@ body:has(.screen-display) {
 			margin: auto;
 			object-fit: contain;
 		}
+	}
+}
+
+footer {
+	color: color-mix(in oklch, var(--fg) 60%, var(--bg));
+	display: flex;
+	flex-direction: column;
+	font-size: 0.625rem;
+	font-weight: 500;
+	gap: 0.5rem;
+	justify-content: space-between;
+	padding: 0.75rem;
+
+	details,
+	p {
+		line-height: 1.1;
+		margin: 0;
+		text-align: start;
+	}
+
+	pre {
+		font-size: 0.625rem;
+		font-weight: 400;
+		line-height: 1.5;
+		margin: 0;
+		overflow-x: scroll;
+		padding: 1rem;
+		text-align: left;
 	}
 }
